# VCM

./: CMakeLists.txt  PowerCovarianceMeasure.h  PowerCovarianceMeasure.ih  README.md  angle-viewer.cpp  area-integration.cpp  bunny129.vol  bunny34.vol  bunny66.vol  compute-convergence.sh  compute-noise-convergence.sh  compute-normal.sh  delta-distance.cpp  delta-distance3D.cpp  delta-vcm-3d.cpp  delta-vcm.cpp  dvcm-2d.cpp  dvcm-3d.cpp  dvcm-features-3d.cpp  generic3dNormalEstimators.cpp  genericNormalEstimator.cpp  heightfield2offAndNormals.cpp  helix-10.pts  implicitShape3NormalEstimation.cpp  noisyImplicitShape3NormalEstimation.cpp  tube2.pgm  vol2offAndNormals.cpp
img/: disks-crisp.pgm  disks-fuzzy1.pgm  disks-noise0_3.pgm  rays1-noisy-inv.pgm  rays1-noisy.pgm  rays1.pgm  tube.pgm  tubeinverse.pgm  tubesmall.pgm  tubesmall.vol
